--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,15 @@
       let localStream, remoteStream;
       let peerConnection;
       const config = {
-        iceServers: [{ urls: "stun:stun.l.google.com:19302" }],
+        //iceServers: [{ urls: "stun:stun.l.google.com:19302" }],
+        iceServers: [
+          { urls: "stun:stun.l.google.com:19302" },
+          {
+            urls: "turn:turn.anyfirewall.com:443?transport=tcp",
+            username: "webrtc",
+            credential: "webrtc"
+          }
+        ],
       };
 
       async function startCall() {
